Fix broken styles for #answer

--- a/wwwroot/css/game.scss
+++ b/wwwroot/css/game.scss
@@ -112,6 +112,10 @@ $yellowShadowColor: #ffc107a0;
         transform: scale(.993, .94);
         transition: transform .5s, opacity .25s;
 
-        box-shadow: 0 0 1em $yellowShadowColor;
+        &:focus {
+            border-color: var(--bs-yellow);
+            outline: 0;
+            box-shadow: 0 0 .25em .05em $yellowShadowColor;
+        }
     }
 }
